modified page title and fixed alignment

--- a/screen.css
+++ b/screen.css
@@ -56,7 +56,8 @@ html {
 
 h1, h2{
 	font-family: 'Berkshire Swash', serif;
-	padding-bottom: 0.825em;
+	padding-bottom: 1em;
+	text-align: center;
 }
 
 h1 {
@@ -66,7 +67,6 @@ h1 {
 
 h2 {
 	font-size: 1.75em;
-	padding-left: 10%;
 }
 
 a, p {
